# slanalyzer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  slanalyzer.cpp  slparser.cpp
include/: csvparser.h
src/: AddressMatcher.cpp  AddressMatcher.h  Analyzer.cpp  Analyzer.h  CsvParser.h  GlobalAddressMatcher.cpp  GlobalAddressMatcher.h  GlobalAnalyzer.cpp  GlobalAnalyzer.h  GlobalList.cpp  GlobalList.h  GlobalStringMatcher.cpp  GlobalStringMatcher.h  IListMatcher.h  IMatcher.h  IPMatcher.h  InvertedMatcher.cpp  InvertedMatcher.h  InvertedSubnetMatcher.h  Matcher.cpp  Matcher.h  Parser.h  Processor.cpp  Processor.h  SafeList.cpp  SafeList.h  StringMatcher.cpp  StringMatcher.h  Subnet.cpp  Subnet.h  SubnetMatcher.h  SubnetSet.cpp  SubnetSet.h  TermColor.h  UserAnalyzer.cpp  UserAnalyzer.h  UserList.cpp  UserList.h  UserSafeList.cpp  UserSafeList.h  (+3 more)
